# unsloth_demo

./: Dockerfile  README.md  docker-compose.yml
app/: itai.py  pyproject.toml
data/: instruction_data.json
scripts/: windows_run.ps1  wsl_gpu_setup_and_run.sh
