[project]
name = "it_ai"
version = "0.1.0"
description = "instruction tuning fast learn"
requires-python = ">=3.10,<3.11"

dependencies = [
    "transformers==4.56.2",
    "datasets==4.1.1",
    "torch>=2.3.0",
    "peft>=0.13.0",
]

[project.optional-dependencies]
# GPU 環境（Linux x86_64 + CUDA）でのみ unsloth を導入
gpu = [
  "unsloth==2025.9.10; platform_machine == 'x86_64' and sys_platform == 'linux'"
]

#[tool.uv]
# 追加設定は不要。既定で「現在の環境のみ」を解決します。
