[project]
name = "it_ai"
version = "0.1.0"
description = "instruction tuning fast learn"
requires-python = ">=3.10,<3.11"

dependencies = [
    "transformers==4.56.2",
    # Windows/macOS/Linux で入手可能な安定版に調整
    "datasets>=2.19.0,<3.0.0",
    "torch>=2.3.0",
    "peft>=0.13.0",
    "unsloth==2025.9.10"
]

#[project.optional-dependencies]
# 追加の extras は現状なし（Unsloth は通常依存）。

#[tool.uv]
# 追加設定は不要。既定で「現在の環境のみ」を解決します。
